tests/integration/snapshots/integration__install__dependency_with_types.snap
---
source: tests/integration/install.rs
expression: result
---
ServerPackages:
  MinimalWithTypes.lua: "local MODULE = require(script.Parent._Index[\"biff_minimal-with-types@0.1.0\"][\"minimal-with-types\"])\nexport type A = MODULE.A\nexport type B = MODULE.B\nexport type C = MODULE.C\nexport type D = MODULE.D\nexport type E = MODULE.E\nexport type F = MODULE.F\nexport type BadDefaultTypeParam<T> = MODULE.BadDefaultTypeParam<T>\nexport type WithTypeParams<T, U> = MODULE.WithTypeParams<T, U>\nexport type WithParamPack<T...> = MODULE.WithParamPack<T...>\nreturn MODULE\n"
  _Index:
    biff_minimal-with-types@0.1.0:
      minimal-with-types:
        default.project.json: "{\n    \"name\": \"minimal-with-types\",\n    \"tree\": {\n        \"$path\": \"src\"\n    }\n}"
        src:
          init.lua: "local _test = ` \\\n    test {1337} \\\n    \\' \\\nexport type SHOULD_NOT_BE_FORWARDED = number \\\n\texport type SHOULD_NOT_BE_FORWARDED = number \\\n\t--[[ \\\n`;export type A = number\n\nlocal _normalString = \" \\\n\\\" \\\nexport type SHOULD_NOT_BE_FORWARDED = number \\\n\";export type B = number\n\nlocal _longString = [[\nexport type SHOULD_NOT_BE_FORWARDED = number \\\n\texport type SHOULD_NOT_BE_FORWARDED = number \\\n]];export type C = number\n\nlocal _testLongStringEnded = [=[ test ]==]\nexport type SHOULD_NOT_BE_FORWARDED = number\n]=];export type D = number\n\n----[[\n\n--[[]];export type E = number\n\n--[=[\nexport type SHOULD_NOT_BE_FORWARDED = number\n--]]\n\nexport type SHOULD_NOT_BE_FORWARDED = number\n--]=];export type F = number\n\ntype SHOULD_NOT_BE_FORWARDED = number\nexport type BadDefaultTypeParam<T = SHOULD_NOT_BE_FORWARDED> = number\n\nexport type WithTypeParams<T, U> = {\n    a: T,\n    b: U,\n}\n\nexport type WithParamPack<T...> = number\n\nreturn {}"
default.project.json: "{\n\t\"name\": \"dependency-with-types\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.lua: "local MinimalWithTypes = require(script.Parent.MinimalWithTypes)\n\nreturn function()\n\tprint(MinimalWithTypes)\nend"
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/dependency-with-types\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"MinimalWithTypes\", \"biff/minimal-with-types@0.1.0\"],\n]\n\n[[package]]\nname = \"biff/minimal-with-types\"\nversion = \"0.1.0\"\ndependencies = []\n\n"
wally.toml: "[package]\nname = \"biff/dependency-with-types\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[server-dependencies]\nMinimalWithTypes = \"biff/minimal-with-types@0.1.0\"\n"
